# netguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: attack_sample.pcap  benign_sample.pcap
data/fixtures/fixture_model/: meta.json  metrics.json
deploy/: netguard-api.service  netguard-runner.service
netguard/: __init__.py  config.py
netguard/api/: app.py  routes.py  schemas.py
netguard/capture/: flow_assembler.py  source.py
netguard/features/: extractor.py
netguard/ml/: encoders.py  gbm.py  losses.py  persistence.py  tree.py
netguard/pipeline/: runner.py  scorer.py
netguard/store/: repository.py  schema.sql
netguard/training/: dataset.py  retrain_job.py  train.py
netguard/web/: app.js  index.html  style.css
scripts/: make_fixture_model.py  make_fixture_pcap.py  replay.sh
tests/: conftest.py
tests/api/: test_api.py  test_scheduler.py
tests/integration/: test_pcap_replay.py
tests/unit/: test_encoders.py  test_features.py  test_flow_assembler.py  test_gbm.py  test_losses.py  test_persistence.py  test_purity.py  test_retrain_gate.py  test_scorer_fallback.py  test_tree.py
