[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netguard"
version = "0.1.0"
description = "From-scratch network anomaly detector with a NumPy-only Gradient Boosting Machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.1.3",
    "scapy==2.6.1",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "apscheduler==3.11.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
]

[project.optional-dependencies]
# scikit-learn is permitted ONLY for evaluation/test metrics. It must never be
# imported by netguard/ml/ (enforced by tests/unit/test_purity.py).
dev = [
    "scikit-learn==1.6.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[project.scripts]
netguard-train = "netguard.training.train:main"
netguard-runner = "netguard.pipeline.runner:main"
netguard-api = "netguard.api.app:main"

[tool.setuptools.packages.find]
include = ["netguard*"]

[tool.setuptools.package-data]
netguard = ["web/*", "store/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["netguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["netguard"]
omit = ["netguard/web/*"]
